play/src/front/style/style.css
/* ... */
.discussion .send-message img:hover {
    background-color: #ffffff;
}

/** Action button **/
div.action {
    position: absolute;
    width: 100%;
    height: auto;
    text-align: center;
    bottom: 40px;
    transition: all 0.5s ease;
    animation: mymove 0.5s;
    animation-iteration-count: infinite;
    animation-timing-function: ease-in-out;
}

div.action.info,
div.action.warning,
div.action.danger {
    transition: all 1s ease;
    animation: mymove 1s;
    animation-iteration-count: infinite;
    animation-timing-function: ease-in-out;
}

div.action p.action-body {
    cursor: pointer;
    padding: 10px;
    background-color: #2d2d2dba;
    color: #fff;
    font-size: 14px;
    font-weight: 500;
    text-align: center;
    max-width: 350px;
    margin-left: calc(50% - 175px);
    border-radius: 15px;
}

div.action.warning p.action-body {
    background-color: #ff9800eb;
    color: #000;
}

div.action.danger p.action-body {
    background-color: #da0000e3;
    color: #000;
}

@keyframes mymove {
    0% {
        bottom: 40px;
    }
    50% {
        bottom: 30px;
    }
    100% {
        bottom: 40px;
    }
}

#game-overlay {
    position: absolute;
    width: 100%;
    height: 100%;
    pointer-events: none;
    user-select: none;

    & + div {
        pointer-events: none;
        z-index: 2;
    }

    & + div > div {
        pointer-events: auto;
    }

    & > div {
        position: relative;
        width: 100%;
        height: 100%;

        & > div.scrollable {
            overflow-y: auto;
            -webkit-overflow-scrolling: touch;
            pointer-events: auto;
        }
    }

    &.hide {
        visibility: hidden;
    }
}


.active-discussion div.emoji-picker {
    transform: translateX(-188px);
}

div.emoji-picker {
    @apply bg-contrast/80 backdrop-blur rounded-lg border-none;
    transform: translateX(-68px);
    input.emoji-picker__search {
        border-radius: 1em;
    }
    .emoji-picker__content {
        @apply pb-0 px-0;
    }
    button.emoji-picker__category-button {
        @apply relative z-10;
        &:not(.active) {
            @apply opacity-50 transition-all;
            &:hover {
                @apply opacity-100;
            }
        }
        &.active {
            @apply border-none pb-2;
            @apply after:content-[''] after:absolute after:-bottom-[1px] after:left-0 after:w-full after:h-[3px] after:rounded after:bg-success;
        }
    }
    .emoji-picker__emoji {
        @apply transition-all rounded;
        &:focus, &:hover {
            @apply bg-white/10;
        }
    }
    .emoji-picker__emojis {
        h2.emoji-picker__category-name {
            @apply text-xs uppercase text-white/50 pl-3 font-normal first:mt-3;
        }
    }
    .emoji-picker__search-container {
        @apply flex items-center;
        .emoji-picker__search {
            @apply pl-4 bg-white/10 border-none placeholder:text-white/50;
        }
        .emoji-picker__search-icon {
            @apply static px-3 opacity-20;
        }
    }
    .emoji-picker__category-buttons {
        @apply m-0 relative after:content-[''] after:absolute after:bottom-0 after:left-0 after:w-full after:h-[1px] after:bg-white/20;
    }
}

.noselect {
    -webkit-touch-callout: none; /* iOS Safari */
    -webkit-user-select: none; /* Safari */
    -khtml-user-select: none; /* Konqueror HTML */
    -moz-user-select: none; /* Old versions of Firefox */
    -ms-user-select: none; /* Internet Explorer/Edge */
    user-select: none; /* Non-prefixed version, currently
                                    supported by Chrome, Edge, Opera and Firefox */
}

/* TODO: remove once https://github.com/nostalgic-css/NES.css/pull/482 is released */
.nes-container.is-rounded {
    border-image-repeat: stretch;
}

.emoji-picker__overlay {
    z-index: 200 !important;
}

/* Style for the action or bulle info displayed a side of the user */
.characterTriggerAction{
    -ms-overflow-style: none;  /* IE and Edge */
    scrollbar-width: none;  /* Firefox */
    /* Hide scrollbar for Chrome, Safari and Opera */
    &::-webkit-scrollbar {
        display: none;
    }
    p{
        @apply m-0 p-0;
    }

    &.speech-dom-inner {
        display: block;
    }

    &.speech-dom-inner--message strong {
        color: #e2e8f0;
        font-weight: 600;
    }

    &.speech-dom-inner--warning strong {
        color: #fef3c7;
        font-weight: 600;
    }

    /* Keyboard hint keycaps (SpeechDomElement) */
    .speech-key {
        user-select: none;
        margin: 0 3px;
        vertical-align: middle;
    }

    .speech-key--space {
        position: relative;
        top: -0.04em;
    }

    .speech-key--escape.speech-key--interactive {
        cursor: pointer;
        border-radius: 6px;
        transition: filter 0.15s ease, transform 0.15s ease;

        &:hover {
            filter: brightness(1.12);
            transform: translateY(-0.5px);
        }

        &:active {
            transform: translateY(0);
            filter: brightness(0.95);
        }
    }
}

/** Floating UI arrow placement **/

.floating-ui-arrow,
.floating-ui-arrow::before {
    position: absolute;
}

.floating-ui-arrow {
    visibility: hidden;
}

.floating-ui-arrow::before {
    visibility: visible;
    content: '';
    position: absolute;
    width: 0px;
    height: 0px;

    border-style: solid;
    border-width: 8px;
    border-color: transparent;
}

.floating-ui-arrow[data-arrow-placement='bottom']::before {
    @apply border-t-contrast/80;

    bottom: -12px;
}

.floating-ui-arrow[data-arrow-placement='top']::before {
    @apply border-b-contrast/80;
    top: -12px;
}

.floating-ui-arrow[data-arrow-placement='right']::before {
    @apply border-l-contrast/80;
    right: -12px;
}

.floating-ui-arrow[data-arrow-placement='left']::before {
    @apply border-r-contrast/80;
    left: -12px;
}
/* ... */

